# awfulbots

./: Cargo.toml  TODO  env
scripts/: environment.sh
src/: action.rs  camera.rs  game_state.rs  gui.rs  limits.rs  main.rs  screen.rs  state.rs  util.rs  visualizer.rs
src/gui/: event.rs  ids.rs  mod.rs
src/part/: circle.rs  joint.rs  mod.rs  rectangle.rs  shape.rs
src/screen/: game.rs  menu.rs  mod.rs
src/state/: game.rs  menu.rs  mod.rs
