[package]
name = "awfulbots"
version = "0.1.0"
authors = ["Brad Svercl <bradsvercl@gmail.com>"]
edition = "2018"

# Physics are slow as balls
[profile.dev]
opt-level = 1

[dependencies]
# Debug
fps_counter = "1.0"
# Math
nalgebra = "0.17"
# Physics
ncollide2d = "0.18"
nphysics2d = "0.10"
# Graphics
piston = "0.42"
piston2d-opengl_graphics = "0.59"
piston2d-graphics = "0.30"
pistoncore-glutin_window = "0.54"
# Random
rand = "0.6"
